# bichael-engine

./: .env  CMakeLists.txt  TutorialConfig.h.in  build.sh  main.cpp  version.h.in
src/: engine.cpp  engine.hpp
src/components/: base_component.cpp  base_component.hpp  renderer.cpp  renderer.hpp
src/managers/: game_manager.cpp  game_manager.hpp  input_manager.cpp  input_manager.hpp  rendering_manager.cpp  rendering_manager.hpp
src/objects/: object.cpp  object.hpp
src/util/: defs.hpp
